RESOLVED FIXED31820
[Chromium] Ignore line-height CSS property for search fields
https://bugs.webkit.org/show_bug.cgi?id=31820
Summary [Chromium] Ignore line-height CSS property for search fields
Kent Tamura
Reported 2009-11-23 22:00:20 PST
http://crbug.com/20551 LayoutTests/fast/forms/control-restrict-line-height.html checks that the following controls should ignore line-height CSS property, and Chromium/Windows and Chromium/Linux don't ignore it for button and search. - <select> - <input type=button> - <input type=search> This bug addresses the type=search case.
Attachments
Proposed patch (2.47 KB, patch)
2009-11-23 23:04 PST, Kent Tamura
no flags
Eric Seidel (no email)
Comment 2 2009-11-24 10:00:25 PST
Comment on attachment 43750 [details] Proposed patch OK, looks sane.
WebKit Commit Bot
Comment 3 2009-11-24 18:16:45 PST
Comment on attachment 43750 [details] Proposed patch Clearing flags on attachment: 43750 Committed r51368: <http://trac.webkit.org/changeset/51368>
WebKit Commit Bot
Comment 4 2009-11-24 18:16:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.