2009-11-24  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel.

        [Chromium] Ignore line-height CSS property specified to a search field on
        Windows and Linux.
        https://bugs.webkit.org/show_bug.cgi?id=31820

        LayoutTests/fast/forms/control-restrict-line-height.html checks that the
        following controls should ignore line-height CSS property.
         - <select>
         - <input type=button>
         - <input type=search>
        This change addresses the <input type=search> issue with Chromium/Windows
        and Chromium/Linux.

        * rendering/RenderThemeChromiumSkia.cpp:
        (WebCore::RenderThemeChromiumSkia::adjustSearchFieldStyle): Implement this to ignore line-height.
        * rendering/RenderThemeChromiumSkia.h: Declare adjustSearchFieldStyle().

Canonical link: https://commits.webkit.org/42797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51368 268f45cc-cd09-0410-ab3c-d52691b4dbfc